Fix broken layout #1

--- a/app/assets/stylesheets/tests/testcase.scss
+++ b/app/assets/stylesheets/tests/testcase.scss
@@ -129,7 +129,7 @@
   }
 
   .note {
-    width: 20%;
+    width: 200px;
     max-width: 200px;
     padding: 6px 4px;
 
